# kmisc

./: .gitmodules  CMakeLists.txt  CommonUtils.h  kmisc.pri  main.cpp  validation.pro  validator.h  variant.h
common/: CommonUtils.h
ktypes/: validator.cpp  variant.cpp  variant.h
